--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2.1"
+version: "3"
 services:
   wireguard:
     image: lscr.io/linuxserver/wireguard
@@ -12,7 +12,7 @@ services:
       - TZ=Europe/London
       - SERVERURL=auto #optional
       - SERVERPORT=51820 #optional
-      - PEERS=10 #optional
+      - PEERS=20 #optional
       - PEERDNS=auto #optional
       - INTERNAL_SUBNET=10.13.13.0 #optional
       - ALLOWEDIPS=0.0.0.0/0 #optional
@@ -23,4 +23,26 @@ services:
       - 51820:51820/udp
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
+    restart: unless-stopped
+  wg:
+    image: ngoduykhanh/wireguard-ui:latest
+    container_name: wgui
+    cap_add:
+      - NET_ADMIN
+    network_mode: host
+    environment:
+      - SENDGRID_API_KEY
+      - EMAIL_FROM_ADDRESS
+      - EMAIL_FROM_NAME
+      - SESSION_SECRET
+      - WGUI_USERNAME=epifanovmd
+      - WGUI_PASSWORD=epifan123321
+      - WG_CONF_TEMPLATE
+    logging:
+      driver: json-file
+      options:
+        max-size: 50m
+    volumes:
+      - ./db:/app/db
+      - ~/wireguard/wgui:/etc/wireguard
     restart: unless-stopped
