--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     environment:
       # ⚠️ Required:
       # Change this to your host's public address
-      - WG_HOST=http://79.137.206.71/
+      - WG_HOST=79.137.206.71
 
       # Optional:
       - PASSWORD=epifan123321
