--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - PASSWORD=epifan123321
       # - WG_PORT=51820
       # - WG_DEFAULT_ADDRESS=10.8.0.x
-      # - WG_DEFAULT_DNS=1.1.1.1
+      - WG_DEFAULT_DNS=8.8.8.8
       # - WG_MTU=1420
       # - WG_ALLOWED_IPS=192.168.15.0/24, 10.0.1.0/24
       # - WG_PRE_UP=echo "Pre Up" > /etc/wireguard/pre-up.txt
